# app

./: .env  .env.example  .gitattributes  .gitignore  COMPLETION_CHECKLIST.md  DOCKER_SETUP.md  Makefile  QUICKSTART.md  README.md  RUN_ME.md  docker-compose.prod.yml  docker-compose.yml  makefile
backend/: .dockerignore  Dockerfile  MAGIC_INTEGRATION.md  README.md  entrypoint.sh  pyproject.toml  test_api_endpoints.py  test_magic_fields.py
backend/api/: serializers.py  urls.py  views.py
backend/api/tests/: test_analytics.py
backend/app/: settings.py  urls.py
backend/catalogs/: crossmatch.py  loaders.py  mss_wrapper.py  position_errors.py
backend/catalogs/management/commands/: ingest_catalogs.py
backend/catalogs/tests/: test_hawc_loader.py  test_magic_simulator.py
backend/entrypoints/: backend.sh
backend/fermi/: admin.py  apps.py  crossmatch.py  models.py  serializers.py  urls.py  views.py
backend/fermi/data_catalogues/: fermi.py  hawc.py  lhaaso.py  tevcat.py  utils.py
backend/fermi/management/commands/: seed_data.py  seed_data_fermi.py
backend/fermi/managment/commands/: seed_data.py
backend/fermi/migrations/: 0001_initial.py
backend/fermi/models/: __init__.py  fermi.py
backend/fermi/serializers/: fermi.py
backend/fermi/tests/: test_crossmatch.py  test_loaders.py  test_utils.py  test_views.py
backend/scripts/: mss.py
backend/sources/: admin.py  models.py
backend/sources/migrations/: 0001_initial.py  0002_rename_sources_cat_catalog_name_idx_sources_cat_catalog_b3a729_idx_and_more.py  0003_catalogentry_magic_calculated_at_and_more.py  0004_remove_catalogentry_sources_cat_magic_s_2a9994_idx_and_more.py
backend/tests/: test_main.py
docs/: backend.md  frontend.md  index.md  infrastructure.md  main.tex  manual.md  requirements.md
entrypoints/: backend.sh
frontend/: Dockerfile  README.md  (+10 more)
(+86 files in other folders)
