[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "app",email = "app@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "django (>=6.0.3,<7.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "astropy (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
