[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django REST API for astronomy catalog system"
authors = ["app <app@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.11"
numpy = "^2.4.4"
astropy = "^7.2.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-django = "^4.7.0"
black = "^24.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
